fix: spacing should use same values as padding

--- a/src/components/zen-space/zen-space.scss
+++ b/src/components/zen-space/zen-space.scss
@@ -72,15 +72,6 @@ $aligns: (
 
 // Spacing --------------------------------------
 
-$spacings: (
-  'none': 0,
-  'xs': 1px,
-  'sm': 0.25rem,
-  'md': 0.5rem,
-  'lg': 1rem,
-  'xl': 2rem,
-);
-
 @each $key, $value in $spacings {
   :host([spacing='#{$key}']) ::slotted(*:not(:last-child)) {
     margin-right: #{$value};
